made the 'correct sequence' to wrap to next line when the sequence is bog

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
     border-radius: 2rem;
 }
 
+#correctGameseq {
+    max-width: 100vw; /* Set a maximum width equal to the screen width */
+    word-wrap: break-word; /* Allow long words to break and wrap */
+  }
+  
 #navbarBrand{
     font-family:  Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
 }
